--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expo-verification-app",
+  "name": "prelink_clean",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,13 +9,70 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.17",
+    "@aws-sdk/client-rekognition": "^3.840.0",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-picker/picker": "2.11.1",
+    "@react-navigation/bottom-tabs": "^7.3.14",
+    "@react-navigation/elements": "^2.3.8",
+    "@react-navigation/native": "^7.1.10",
+    "@react-navigation/native-stack": "^7.3.16",
+    "@react-navigation/stack": "^7.3.3",
+    "@sendgrid/mail": "^8.1.5",
+    "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.13",
+    "expo": "^53.0.19",
+    "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.10",
+    "expo-clipboard": "~7.1.4",
+    "expo-constants": "17.1.7",
+    "expo-crypto": "~14.1.5",
+    "expo-firebase-analytics": "^8.0.0",
+    "expo-font": "~13.3.1",
+    "expo-haptics": "~14.1.4",
+    "expo-image": "2.3.2",
+    "expo-image-manipulator": "~13.1.7",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "7.1.7",
+    "expo-media-library": "~17.1.7",
+    "expo-splash-screen": "0.30.10",
     "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "5.0.10",
+    "expo-web-browser": "~14.2.0",
+    "firebase": "^9.23.0",
+    "firebase-admin": "^11.11.1",
+    "firebase-functions": "^4.4.1",
     "react": "19.0.0",
-    "react-native": "0.79.5"
+    "react-dom": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "~ 2.24.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-maps": "1.20.1",
+    "react-native-paper": "^5.14.5",
+    "react-native-qrcode-svg": "^6.3.15",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-uuid": "^2.0.3",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
+    "expo-file-system": "~18.1.11",
+    "expo-asset": "~11.1.7",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2",
+    "@types/react": "~19.0.10",
+    "eslint": "^9.25.0",
+    "eslint-config-expo": "~9.2.0",
+    "firebase-functions-test": "^3.0.0"
   },
   "private": true
 }
