--- a/functions/package.json
+++ b/functions/package.json
@@ -14,9 +14,15 @@
   "main": "index.js",
   "dependencies": {
     "@aws-sdk/client-rekognition": "^3.840.0",
-    "@google-cloud/vision": "^5.2.0",
+    "@google-cloud/vision": "^5.3.0",
+    "@sendgrid/mail": "^8.1.5",
+    "@supabase/supabase-js": "^2.50.5",
     "aws-sdk": "^2.1692.0",
-    "dotenv": "^17.0.1",
+    "axios": "^1.10.0",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0",
     "firebase-admin": "^11.11.1",
     "firebase-functions": "^4.9.0",
     "react-native-dotenv": "^3.4.11"
