--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@aws-sdk/client-rekognition": "^3.840.0",
     "@expo/vector-icons": "^14.1.0",
+    "@google-cloud/vision": "^5.3.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-picker/picker": "2.11.1",
@@ -20,15 +21,18 @@
     "@react-navigation/native-stack": "^7.3.16",
     "@react-navigation/stack": "^7.3.3",
     "@sendgrid/mail": "^8.1.5",
+    "@supabase/supabase-js": "^2.50.5",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "expo": "^53.0.19",
+    "expo-asset": "~11.1.7",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.10",
     "expo-clipboard": "~7.1.4",
     "expo-constants": "17.1.7",
     "expo-crypto": "~14.1.5",
-    "expo-firebase-analytics": "^8.0.0",
+    "expo-dev-client": "~5.2.4",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "2.3.2",
@@ -62,10 +66,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.3",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-file-system": "~18.1.11",
-    "expo-asset": "~11.1.7",
-    "expo-dev-client": "~5.2.4"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
