✅ Added react-native-reanimated/plugin to app.json

--- a/app.json
+++ b/app.json
@@ -65,7 +65,8 @@
             "vision-camera-detect-rectangles"
           ]
         }
-      ]
+      ],
+      "react-native-reanimated/plugin"
     ],
     "extra": {
       "eas": {
