--- a/package.json
+++ b/package.json
@@ -67,11 +67,11 @@
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.3",
-    "react-native-vision-camera": "^4.7.1",
+    "react-native-vision-camera": "latest",
+    "react-native-vision-camera-face-detector": "^1.8.6",
     "react-native-vision-camera-rectangle-detector": "^0.1.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
-    "vision-camera-face-detector": "^0.1.8"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
