--- a/app.json
+++ b/app.json
@@ -49,6 +49,14 @@
     },
     "plugins": [
       [
+        "expo-build-properties",
+        {
+          "ios": {
+            "deploymentTarget": "16.0"
+          }
+        }
+      ],
+      [
         "expo-image-picker",
         {
           "photosPermission": "Allow PreLink to access your photo library to verify your identity.",
