--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "react-native-vision-camera-face-detector": "^1.8.6",
     "react-native-vision-camera-rectangle-detector": "^0.1.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "expo-build-properties": "~0.14.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
