Update app.json with vision-camera-rectangle-detector and deploymentTarget

--- a/app.json
+++ b/app.json
@@ -67,7 +67,8 @@
         "react-native-vision-camera",
         {
           "frameProcessorPlugins": [
-            "vision-camera-face-detector"
+            "vision-camera-face-detector",
+            "vision-camera-rectangle-detector"
           ]
         }
       ]
