--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo": "^53.0.19",
     "expo-asset": "~11.1.7",
     "expo-blur": "~14.1.5",
+    "expo-build-properties": "~0.14.8",
     "expo-camera": "~16.1.10",
     "expo-clipboard": "~7.1.4",
     "expo-constants": "17.1.7",
@@ -67,12 +68,11 @@
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.3",
-    "react-native-vision-camera": "latest",
+    "react-native-vision-camera": "^4.7.1",
     "react-native-vision-camera-face-detector": "^1.8.6",
     "react-native-vision-camera-rectangle-detector": "^0.1.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-build-properties": "~0.14.8"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
